--- a/react/src/styles/App.module.css
+++ b/react/src/styles/App.module.css
@@ -1,42 +1,138 @@
-#root {
-  /* max-width: 100vw; */
-  margin: 0 auto;
+.appLayout {
+  display: flex;
+  
+  /* min-height: 100vh; */
+  /* height: 100vh; */
+}
+body{
+  /* padding-top: 20px; */
+  /* margin-top: 20px; */
+  width: 100%;
+  overflow-y: auto;
+  
+  /* max-height: max-content; */
+}
+.header{
+  width: 100%;
+  position: fixed;
+  height: 60px;
+  background-color: #2c3e50;
+  border:#ecf0f1 4px;
+  padding: 10px 20px;
+  top: 0;
+}
+.sidebar {
+  width: 250px;
+  background-color: #2c3e50;
+  height: 100vh;
+  color: #ecf0f1;
+  display: flex;
+  flex-direction: column;
+  padding: 20px;
+  z-index: 1000;
+  transition: transform 0.3s ease;
+  /* position: fixed; */
+}
+.logo{
+  display: flex;
+  justify-content: center;
+  color: #ecf0f1;
+}
+
+
+.sidebar .logo {
+  font-size: 20px;
+  font-weight: bold;
+  margin-bottom: 20px;
+}
+
+.navMenu {
+  flex-grow: 1;
+}
+
+.navLink {
+  display: block;
+  color: #ecf0f1;
+  text-decoration: none;
+  margin: 10px 0;
   padding: 10px;
-  text-align: center;
+  border-radius: 5px;
+  transition: background 0.3s;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+.navLink:hover {
+  background-color: #34495e;
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
+.logoutButton {
+  background-color: #e74c3c;
+  color: #ecf0f1;
+  border: none;
+  padding: 10px;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+.logoutButton:hover {
+  background-color: #c0392b;
+}
+
+.mainContent {
+  flex-grow: 1;
+  padding-top: 10px;
+  max-height: 100vh; 
+  overflow-y: auto;
+  box-sizing: border-box; 
+  height: 100%; 
+}
+
+.open {
+  transform: translateX(0);
+}
+
+/* Hamburger menu icon */
+.menuIcon {
+  display: none; /* hide the menu icon by default */
+  position: fixed;
+  top: 20px;
+  left: 20px;
+  z-index: 1000;
+  background: transparent;
+  border: none;
+  cursor: pointer;
+}
+
+.bar {
+  display: block;
+  width: 25px;
+  height: 3px;
+  background-color: #7e8080;
+  margin: 5px 0;
+}
+
+/* Media Query for small screens */
+@media (max-width: 900px) {
+  .sidebar {
+    position: fixed;
+    top: 0;
+    left: -250px; /* Initially hidden off-screen */
   }
-  to {
-    transform: rotate(360deg);
+
+  .sidebar.open {
+    left: 0; /* Show when open */
+  }
+
+  .menuIcon {
+    display: block; /* Show the hamburger menu icon */
+  }
+
+  .appLayout {
+    flex-direction: column;
+  }
+
+  .mainContent {
+    margin-left: 0;
   }
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
-}
 
-.card {
-  padding: 2em;
-}
-
-.read-the-docs {
-  color: #888;
-}
