--- a/react/src/styles/App.module.css
+++ b/react/src/styles/App.module.css
@@ -31,7 +31,7 @@ body{
   padding: 20px;
   z-index: 1000;
   transition: transform 0.3s ease;
-  /* position: fixed; */
+  position: fixed;
 }
 .logo{
   display: flex;
