--- a/react/src/styles/MenuItem.module.css
+++ b/react/src/styles/MenuItem.module.css
@@ -5,17 +5,17 @@
     flex-wrap: wrap; /*รองรับหน้าจอเล็ก*/
     border: 1px solid #ddd;
     border-radius: 8px;
-    /* padding: 20px; */
+    padding: 5px;
     /* margin: 20px 0; */
     /* align-items: center; */
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 4px 6px rgba(151, 147, 147, 0.1);
     /* background-color: #2D232A; */
     background-color: #242324;
   }
   
   .image {
     width: 100%;
-  height: 150px;
+  height: 200px;
   object-fit: cover;
   border-radius: 4px;
     /* justify-content: center;
@@ -28,6 +28,7 @@
   }
   .details{
     margin: 10px ;
+    height: auto;
   }
 
   h3{
@@ -58,10 +59,11 @@
   .quantityControl {
     display: flex;
     justify-content: space-between;
-    align-items: center;
+    align-items: flex-end;
     margin-top: 5px;
-    margin-bottom: 15px;
+    /* margin-bottom: ; */
     color: #E6C65C;
+    bottom: 0;
     /* place-items: end; */
   }
   
@@ -148,6 +150,7 @@
       justify-content: center;
       /* padding-left: 20px; */
     }
+   
   }
   /* Add to MenuItem.module.css */
 /* เพิ่มให้หน้าหลังไม่สามารถเลื่อนเมื่อ popup เปิด */
