--- a/react/src/styles/MenuItem.module.css
+++ b/react/src/styles/MenuItem.module.css
@@ -130,7 +130,7 @@
       flex-direction: row;
       max-width: 100%; /* จำกัดความกว้าง */
       /* height: 50%; */
-      margin: 10px auto;
+      /* margin: 10px auto; */
     }
   }
   
