--- a/react/src/styles/MenuList.module.css
+++ b/react/src/styles/MenuList.module.css
@@ -27,7 +27,8 @@ min-width: fit-content;
 .menuList {
     padding: 2px;
     padding-top: 110px;
-    
+    /* display: contents; */
+    /* margin-left: 250px; */
   }
   
   .menuGrid {
@@ -38,10 +39,17 @@ min-width: fit-content;
   /* .menuGrid2{
     width: 100%;
   } */
-  @media (min-width: 100px) and (max-width: 1000px){
+    @media (min-width: 100px) and (max-width: 700px){
     .menuGrid{
       /* display:inline; */
       grid-template-columns: repeat(2, minmax(0, 1fr));
+      gap: 5px;
+    }
+  }
+  @media (min-width: 701px) and (max-width: 1024px){
+    .menuGrid{
+      /* display:inline; */
+      grid-template-columns: repeat(3, minmax(0, 1fr));
       gap: 5px;
     }
   }
@@ -261,5 +269,9 @@ h1{
   .header{
     margin-left: 250px;
   }
+  .menuList{
+    margin-left: 250px;
+  }
+
 
 }
