--- a/react/src/styles/MenuItem.module.css
+++ b/react/src/styles/MenuItem.module.css
@@ -1,242 +1,4 @@
-
-
-.menuItem {
-    /* display: flex; */
-    flex-wrap: wrap; /*รองรับหน้าจอเล็ก*/
-    border: 1px solid #ddd;
-    border-radius: 8px;
-    padding: 5px;
-    /* margin: 20px 0; */
-    /* align-items: center; */
-    box-shadow: 0 4px 6px rgba(151, 147, 147, 0.1);
-    /* background-color: #2D232A; */
-    background-color: #242324;
-  }
-  
-  .image {
-    width: 100%;
-  height: 200px;
-  object-fit: cover;
-  border-radius: 4px;
-    /* justify-content: center;
-    align-items: center;
-    width: 400px;
-    height: 300px;
-    object-fit: cover;
-    border-radius: 8px; */
-    /* margin-right: 20px; */
-  }
-  .details{
-    margin: 10px ;
-    height: auto;
-  }
-
-  h3{
-    color: #E6C65C;
-  }
-  h2{
-    font-size: 20px;
-    font-family: Georgia, 'Times New Roman', Times, serif;
-  }
-  h4{
-    font-size: 16px;
-  }
-  p{
-    color:#e63946;
-  }
-  /* .details {
-    justify-content: center;
-      align-items: center;
-    flex: 1;
-    text-align: center;
-    min-width: 200px; 
-  }
-  
-  .details h3 {
-    margin: 10px 0;
-    text-align: center;
-  } */
-  
-  .quantityControl {
-    display: flex;
-    justify-content: space-between;
-    align-items: flex-end;
-    margin-top: 5px;
-    /* margin-bottom: ; */
-    color: #E6C65C;
-    bottom: 0;
-    /* place-items: end; */
-  }
-  
-  .quantityControl button {
-    /* margin-left: 20% ; */
-    align-items: center;
-    justify-content: center;
-    width: 30px;
-    height: auto;
-    background-color: #fff;
-    color: #E6C65C;
-    border: none;
-    border-radius: 100px;
-    cursor: pointer;
-    transition: background-color 0.3s;
-    font-size: 20px;
-    text-align: center;
-  }
-  
-  .quantityControl button:hover {
-    background-color: #e0482d;
-    align-items: center;
-    justify-content: center;
-  }
-  
-  .quantityControl button:disabled {
-    background-color: #ccc;
-    cursor: not-allowed;
-  }
-  
-  /* Media Query สำหรับหน้าจอขนาดเล็ก (มือถือ) */
-  /* @media (max-width: 768px) {
-    .menuItem {
-      flex-direction: column; 
-      text-align: center;
-      padding: 5%;
-      width: 100%;
-      height: 50%;
-      align-items: center;
-    }
-  
-    .image {
-      width: 50%;
-      height: 100%;
-      margin: 0 0 10px 0;
-    }
-  
-    .details {
-      justify-content: center;
-      align-items: center;
-      text-align: center;
-    }
-  
-    .quantityControl {
-      justify-content: center;
-      align-items: center
-    }
-  } */
-  
-  /* Media Query สำหรับหน้าจอแท็บเล็ต */
-  @media (min-width: 769px) and (max-width: 1024px) {
-    .menuItem {
-      flex-wrap: wrap;
-      flex-direction: row;
-      max-width: 100%; /* จำกัดความกว้าง */
-      /* height: 50%; */
-      /* margin: 10px auto; */
-    }
-  }
-  
-  /* Media Query สำหรับหน้าจอขนาดใหญ่ (PC) */
-  @media (min-width: 1025px) {
-    .menuItem {
-      justify-content: center;
-      align-items: center;
-      flex-wrap: wrap;
-      flex-direction: row;
-      max-width: auto; /* จำกัดความกว้าง */
-      margin: 20px ;
-      padding: 20px;
-    }
-  
-    .details {
-      justify-content: center;
-      /* padding-left: 20px; */
-    }
-   
-  }
-  /* Add to MenuItem.module.css */
-/* เพิ่มให้หน้าหลังไม่สามารถเลื่อนเมื่อ popup เปิด */
-  body.popup-open {
-    overflow: hidden;
-  }
-
-.popup {
-  position: fixed;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  background: rgba(0, 0, 0, 0.5);
-  /* background: #E6C65C; */
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  z-index: 11;
-  overflow: auto; /* ทำให้สามารถเลื่อน popup ได้ */
+.scrollbar-hidden::-webkit-scrollbar {
+  display: none;
 }
 
-.popupContent {
-  /* margin-top: 35%; */
-  background: rgb(30, 30, 30);
-  /* background: #E6C65C; */
-  /* padding: ; */
-  /* border-radius: ; */
-  text-align: center;
-  max-width: 100%;
-  top: 60px;
-  height: 100%;
-  width: 100%;
-  overflow-y: auto; /* ทำให้สามารถเลื่อนเนื้อหาภายใน popup ได้ */
-}
-
-.popupImage {
-  width: 100%;
-  height: 200px;
-  /* margin-bottom: 15px; */
-}
-
-.btnaddCart {
-  background-color: #27ae60;
-  color: white;
-  padding: 10px;
-  border: none;
-  border-radius: 5px;
-  cursor: pointer;
-}
-
-.btnaddCart:hover {
-  background-color: #2ecc71;
-}
-
-.closeButton {
-  position: absolute;
-  top: 10px; /* ห่างจากขอบบน 10px */
-  right: 10px; /* ห่างจากขอบขวา 10px */
-  /* padding: 5px 5px; */
-  background-color: #fff; /* สีพื้นหลังโปร่งแสง */
-  color: black;
-  border: none;
-  border-radius: 5px;
-  cursor: pointer;
-  font-size: 18px;
-  width: 30px;
-  height: 30px;
-  border-radius: 30px;
-  
-}
-
-.closeButton:hover {
-  background-color: rgba(255, 255, 255, 0.8);
-}
-/* button {
-  margin-top: 10px;
-  padding: 10px;
-  background-color: #007bff;
-  color: white;
-  border: none;
-  border-radius: 5px;
-  cursor: pointer;
-}
-
-button:hover {
-  background-color: #0056b3;
-} */
